--- a/src/main/resources/templates/receptionist/addPatient.html
+++ b/src/main/resources/templates/receptionist/addPatient.html
@@ -12,10 +12,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/receptionist/adduser">Add Patient</a>
+                    <a class="nav-link active" aria-current="page" href="/receptionist/addpatient">Add Patient</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Edit Patient</a>
+                    <a class="nav-link" href="/receptionist/editpatient">Edit Patient</a>
                 </li>
             </ul>
             <span>
@@ -27,7 +27,7 @@
 
 
 <div class="container">
-    <form method="post" th:action="@{/receptionist/adduser}" th:object="${user}">
+    <form method="post" th:action="@{/receptionist/addpatient}" th:object="${user}">
         <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
             <input type="text" class="form-control" id="email" required th:field="*{Email}">
@@ -109,7 +109,7 @@
                 </select>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Add Patient</button>
+        <button type="submit" class="btn btn-primary mb-5">Add Patient</button>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
