--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -7,10 +7,12 @@
 </head>
 <body>
 
-<h3 class="text-center">I am a</h3>
+<h3 class="text-center my-5">Please Choose a User Interface</h3>
 
 <div class="d-flex justify-content-evenly">
-    <a class="btn btn-primary" href="/receptionist/adduser" role="button">Receptionist</a>
+    <a th:if="${isPatient}" class="btn btn-primary" href="/receptionist/addpatient" role="button">Patient</a>
+    <a th:if="${isReceptionist}" class="btn btn-primary" href="/receptionist/addpatient" role="button">Receptionist</a>
+    <a th:if="${isDentistOrHygienist}" class="btn btn-primary" href="/receptionist/addpatient" role="button">Dentist or Hygienist</a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
