--- a/src/main/resources/templates/patient/records.html
+++ b/src/main/resources/templates/patient/records.html
@@ -12,13 +12,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/receptionist/addpatient">Add Patient</a>
+                    <a class="nav-link" aria-current="page" href="/patient/appointments">My Appointments</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/receptionist/editpatient">Edit Patient</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/receptionist/createappointment">Create Appointment</a>
+                    <a class="nav-link active" aria-current="page" href="/patient/records">My Medical Records</a>
                 </li>
             </ul>
             <span>
@@ -28,27 +25,23 @@
     </div>
 </nav>
 
-
 <div class="container">
     <table class="table">
         <thead>
         <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Email</th>
-            <th scope="col"></th>
+            <th scope="col">Record ID</th>
+            <th scope="col">Notes</th>
         </tr>
         <tbody>
-        <tr th:each="p: ${patients}">
-            <td th:text="${p.firstName}"></td>
-            <td th:text="${p.lastName}"></td>
-            <td th:text="${p.email}"></td>
-            <td><a th:href="'/receptionist/editpatient/' + ${p.user_id}" class="btn btn-primary">Edit</a></td>
+        <tr th:each="r: ${records}">
+            <td th:text="${r.record_id}"></td>
+            <td th:text="${r.notes}"></td>
         </tr>
-    </tbody>
+        </tbody>
         </thead>
     </table>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
