--- a/src/main/resources/templates/receptionist/addPatient.html
+++ b/src/main/resources/templates/receptionist/addPatient.html
@@ -17,6 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/receptionist/editpatient">Edit Patient</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/receptionist/createappointment">Create Appointment</a>
+                </li>
             </ul>
             <span>
                 <a class="nav-link" href="/logout">Logout</a>
