--- a/src/main/resources/templates/receptionist/editPatientForm.html
+++ b/src/main/resources/templates/receptionist/editPatientForm.html
@@ -12,10 +12,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/receptionist/addpatient">Add Patient</a>
+                    <a class="nav-link" aria-current="page" href="/receptionist/addpatient">Add Patient</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/receptionist/editpatient">Edit Patient</a>
+                    <a class="nav-link active" href="/receptionist/editpatient">Edit Patient</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/receptionist/createappointment">Create Appointment</a>
                 </li>
             </ul>
             <span>
