--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -12,7 +12,7 @@
 <div class="d-flex justify-content-evenly">
     <a th:if="${isPatient}" class="btn btn-primary" href="/patient/appointments" role="button">Patient</a>
     <a th:if="${isReceptionist}" class="btn btn-primary" href="/receptionist/addpatient" role="button">Receptionist</a>
-    <a th:if="${isDentistOrHygienist}" class="btn btn-primary" href="/receptionist/addpatient" role="button">Dentist or Hygienist</a>
+    <a th:if="${isDentistOrHygienist}" class="btn btn-primary" href="/dentist/appointments" role="button">Dentist or Hygienist</a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
