Disabled some inputs

--- a/src/main/resources/templates/dentist/appointment.html
+++ b/src/main/resources/templates/dentist/appointment.html
@@ -86,15 +86,15 @@
   </div>
   <div class="mb-3">
     <label for="cellPhoneNumber" class="form-label">Cellphone Number</label>
-    <input type="text" class="form-control" id="cellPhoneNumber" th:value="${patient.cellPhoneNumber}">
+    <input type="text" class="form-control" id="cellPhoneNumber" disabled th:value="${patient.cellPhoneNumber}">
   </div>
   <div class="mb-3">
     <label for="homePhoneNumber" class="form-label">Home phone Number</label>
-    <input type="text" class="form-control" id="homePhoneNumber" th:value="${patient.homePhoneNumber}">
+    <input type="text" class="form-control" id="homePhoneNumber" disabled  th:value="${patient.homePhoneNumber}">
   </div>
   <div class="mb-3">
     <label for="email" class="form-label">Email address</label>
-    <input type="text" class="form-control" id="email" required th:value="${patient.email}">
+    <input type="text" class="form-control" id="email" disabled th:value="${patient.email}">
   </div>
 </div>
 
