Middle name not mandatory

--- a/src/main/resources/templates/receptionist/editPatientForm.html
+++ b/src/main/resources/templates/receptionist/editPatientForm.html
@@ -44,7 +44,7 @@
         </div>
         <div class="mb-3">
             <label for="middleName" class="form-label">Middle Name</label>
-            <input maxlength="50" type="text" class="form-control" id="middleName" required th:field="*{MiddleName}">
+            <input maxlength="50" type="text" class="form-control" id="middleName" th:field="*{MiddleName}">
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last Name</label>
